--- a/src/app/modules/decks/filter/deck-filters.component.html
+++ b/src/app/modules/decks/filter/deck-filters.component.html
@@ -30,12 +30,12 @@
         </span>
         }
         @if(!tags.includes('v5')) {
-        <span class="badge rounded-pill text-bg-secondary btn-badge" (click)="onSelectTag('v5')">
+        <span class="badge rounded-pill text-bg-secondary btn-badge opacity-50" (click)="onSelectTag('v5')">
           #{{ 'vtes.tags.v5' | transloco }}
         </span>
         }
         @if(!tags.includes('2player')) {
-        <span class="badge rounded-pill text-bg-secondary btn-badge" (click)="onSelectTag('2player')">
+        <span class="badge rounded-pill text-bg-secondary btn-badge opacity-50" (click)="onSelectTag('2player')">
           #{{ 'vtes.tags.2player' | transloco }}
         </span>
         }
