--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -16,8 +16,26 @@
     </div>
   </div>
   }
+
   <!-- Hero Section -->
   <section class="hero-section py-5 mb-4">
+    <!-- Advent Calendar Banner -->
+    @if (currentAdvent) {
+    <div class="container mb-4">
+      <a routerLink="/advent" class="text-decoration-none">
+        <div class="advent-banner-content">
+          <div class="advent-banner-icon d-none d-md-block">🎄</div>
+          <div class="advent-banner-text">
+            <h2 class="advent-banner-title mb-2">🎅 {{ 'advent.home_title' | transloco: { year: currentAdvent.year } }}
+            </h2>
+            <p class="advent-banner-subtitle mb-0 d-none d-md-block">✨ {{ 'advent.home_subtitle' | transloco }} ✨</p>
+          </div>
+          <div class="advent-banner-icon d-none d-md-block">⭐</div>
+        </div>
+      </a>
+    </div>
+    }
+
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-10">
