--- a/src/styles.scss
+++ b/src/styles.scss
@@ -116,6 +116,11 @@ $handleBgColor: var(--bs-primary-rgb);
 
 .btn-badge {
   cursor: pointer;
+  transition: opacity 0.2s ease;
+
+  &.opacity-50:hover {
+    opacity: 1 !important;
+  }
 }
 
 /** Disable select **/
