--- a/src/app/modules/deck-shared/library-card/library-card.component.html
+++ b/src/app/modules/deck-shared/library-card/library-card.component.html
@@ -146,18 +146,6 @@
               </h6>
             </div>
             <div class="card-body p-2">
-              @for (shop of (shops$ | async)!; track shop; let last = $last) {
-              <div class="d-flex align-items-center justify-content-between py-1 border-dark"
-                [class.border-bottom]="!last || decks.length > 0">
-                @if (getShopInfo(shop.platform); as shopInfo) {
-                <a class="text-decoration-none flex-grow-1" [href]="shop.link" target="_blank" gaEvent="purchase"
-                  [gaCategory]="shop.platform" [gaLabel]="card.name">
-                  <span class="badge bg-success me-2">{{ shopInfo.name }}</span>
-                  <span class="fw-medium">{{ shop.price | currency:shop.currency }}</span>
-                </a>
-                }
-              </div>
-              }
               @for (deck of decks; track deck; let last = $last) {
               <div class="d-flex align-items-center py-1 border-dark" [class.border-bottom]="!last">
                 <a class="text-decoration-none flex-grow-1" [routerLink]="'/deck/'+deck.id"
@@ -170,12 +158,23 @@
                 </a>
               </div>
               }
+              @for (shop of (shops$ | async)!; track shop; let last = $last) {
+              <div class="d-flex align-items-center justify-content-between py-1 border-dark"
+                [class.border-bottom]="!last || decks.length > 0" [class.opacity-50]="!shop.inStock">
+                <a class="text-decoration-none flex-grow-1" [href]="shop.link" target="_blank" gaEvent="purchase"
+                  [gaCategory]="shop.shopInfo.name" [gaLabel]="card.name"
+                  [class.text-decoration-line-through]="!shop.inStock">
+                  <span class="badge me-2" [class.bg-success]="shop.inStock" [class.bg-secondary]="!shop.inStock">{{
+                    shop.shopInfo.fullName }}</span>
+                  <span class="fw-medium">{{ shop.price | currency:shop.currency }}</span>
+                </a>
+              </div>
+              }
             </div>
           </div>
           }
           }
-          <app-collection-card-stats [cardId]="card.id"
-            (routerClick)="modal.dismiss('Link click')" />
+          <app-collection-card-stats [cardId]="card.id" (routerClick)="modal.dismiss('Link click')" />
           <small class="float-end text-muted mt-2">#{{card.id}}</small>
         </div>
         <div class="modal-footer align-self-end">
@@ -188,11 +187,12 @@
               <i class="bi bi-search"></i> {{ t('search') }}
             </button>
             @for (shop of (shops$ | async)!; track shop) {
-            @if (getShopInfo(shop.platform); as shopInfo) {
-            <a type="button" class="btn btn-sm btn-success col-auto me-1" [title]="t('buy', { name: shopInfo.name })"
-              [href]="shop.link" target="_blank" gaEvent="purchase" [gaCategory]="shop.platform" [gaLabel]="card.name">
+            @if(shop.inStock && shop.shopInfo.showButton){
+            <a type="button" class="btn btn-sm btn-success col-auto me-1"
+              [title]="t('buy', { name: shop.shopInfo.fullName })" [href]="shop.link" target="_blank" gaEvent="purchase"
+              [gaCategory]="shop.shopInfo.name" [gaLabel]="card.name">
               <i class="bi bi-cart4"></i>
-              <span>&nbsp;{{ shopInfo.name }}</span><br />{{ shop.price | currency:shop.currency }}
+              <span>&nbsp;{{ shop.shopInfo.fullName }}</span><br />{{ shop.price | currency:shop.currency }}
             </a>
             }
             }
