--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -112,6 +112,9 @@
             <img [src]="profileImage$ | async" [alt]="displayName$ | async" width="30" height="30"
               class="rounded-circle me-2" onerror="this.src='/assets/img/default_user.png'">
             <strong>{{ displayName$ | async }}</strong>
+            @if (isSupporter$ | async) {
+            <i class="bi bi-patch-check-fill text-gold ms-1" title="Supporter"></i>
+            }
           </a>
           <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownUser">
             <a ngbDropdownItem routerLink="/collection" [routerLinkActive]="['active']" (click)="isCollapsed = true">
