--- a/src/app/modules/advent/advent.component.scss
+++ b/src/app/modules/advent/advent.component.scss
@@ -44,6 +44,7 @@ main {
   margin: 0 auto;
   max-width: $present-dimension * 4;
   overflow-x: hidden;
+  padding-bottom: 4rem;
 
   @media (max-width: 767px) {
     max-width: calc(
@@ -51,6 +52,7 @@ main {
     ); // 2 columns on mobile with extra space
     padding: 0 0.5rem; // Add horizontal padding
     width: 100%;
+    padding-bottom: 2rem;
   }
 
   @media (min-width: 768px) and (max-width: 1199px) {
