fix: translations and track

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -46,6 +46,6 @@
     </section>
   </div>
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-    v{{ appVersion }} © 2020-{{ now | date:'YY' }} {{ t('copyright') }}
+    v{{ appVersion }} © 2020-{{ now | date:'yy' }} {{ t('copyright') }}
   </div>
 </footer>
