--- a/src/app/modules/home/home-section/home-section.component.html
+++ b/src/app/modules/home/home-section/home-section.component.html
@@ -4,28 +4,28 @@
   </div>
   <div class="card-body p-0 py-2">
     @if (decks) {
-      <div class="container-fluid">
-        <div class="row">
-          @for (deck of decks; track deck) {
-            <div class="col-12">
-              <app-deck-card [deck]="deck" height="170px" (tagClick)="onTagClick($event)" />
-            </div>
-          }
+    <div class="container-fluid">
+      <div class="row">
+        @for (deck of decks; track deck.id) {
+        <div class="col-12">
+          <app-deck-card [deck]="deck" height="170px" (tagClick)="onTagClick($event)" />
         </div>
+        }
       </div>
+    </div>
     } @else {
-      <div class="container-fluid">
-        <div class="row">
-          @for (item of [].constructor(6); track item; let i = $index) {
-            <div class="col-12">
-              <div class="deck-card border border-2 rounded-3 center hover-shadow my-2 text-black border-dark"
-                style="min-height: 190px">
-                <app-loading />
-              </div>
-            </div>
-          }
+    <div class="container-fluid">
+      <div class="row">
+        @for (item of [].constructor(6); track item; let i = $index) {
+        <div class="col-12">
+          <div class="deck-card border border-2 rounded-3 center hover-shadow my-2 text-black border-dark"
+            style="min-height: 190px">
+            <app-loading />
+          </div>
         </div>
+        }
       </div>
+    </div>
     }
   </div>
   <div class="card-footer white">
