--- a/src/app/modules/deck-shared/crypt-card/crypt-card.component.html
+++ b/src/app/modules/deck-shared/crypt-card/crypt-card.component.html
@@ -70,7 +70,7 @@
         <div class="modal-body flex-wrap">
           <div class="d-flex flex-column h-100">
             <div class="flex-grow-0">
-              <p>
+              <p class="clearfix">
                 @for (discipline of card.disciplineIcons; track discipline) {
                 <i class="vtes" [ngClass]="discipline"></i>
                 }
