--- a/src/app/modules/deck-card/deck-card.component.scss
+++ b/src/app/modules/deck-card/deck-card.component.scss
@@ -14,6 +14,12 @@
     background-color: transparent;
   }
 
+  .deck-header-grid {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    align-items: center;
+  }
+
   .deck-stats {
     @media (max-width: 600px) {
       flex-direction: column !important;
