--- a/src/app/modules/deck/deck.component.html
+++ b/src/app/modules/deck/deck.component.html
@@ -24,7 +24,7 @@
                   <h3 class="fw-bold mb-0">{{ deck.name | titlecase }}</h3>
                 </div>
                 <div class="deck-meta">
-                  <p class="mb-1 d-flex align-items-center">
+                  <p class="mb-1 d-flex align-items-center flex-wrap justify-content-center justify-content-md-start">
                     @if(deck.user){
                     <a class="text-decoration-none d-inline-flex align-items-center"
                       [routerLink]="'/user/' + deck.author">
@@ -40,7 +40,7 @@
                       </span>
                     </a>
                     }@else {
-                    <b>{{ t('created_by') }} </b>
+                    <b>{{ t('created_by') }}: </b>
                     <a class="text-decoration-none ms-1" routerLink="/decks" [queryParams]="{
                       author: deck.author,
                       type: deck.type
@@ -54,8 +54,11 @@
                     </a>
                     }
                     <span class="text-dark mx-1">•</span>
-                    <span class="text-muted">
+                    <span class="text-muted d-none d-md-inline">
                       {{ deck.creationDate | translocoDate: { dateStyle: 'long' } }}
+                    </span>
+                    <span class="text-muted d-md-none">
+                      {{ deck.creationDate | translocoDate: { dateStyle: 'medium' } }}
                     </span>
                     @if(deck.stats.price) {
                     <span class="text-dark mx-1">•</span>
